[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Scripts/Battle/MoveButtonStyles/MoveButtonStyleDP.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Battle/MoveButtons.png" type="Texture" id=2]
[ext_resource path="res://Fonts/pkmndpb.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/pkmndp.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 4 )

[node name="MoveButtonStyleDP" type="Node2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 10.0
margin_right = 116.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveButtons" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
vframes = 5
hframes = 4

[node name="MoveName" type="Label" parent="."]
margin_left = 7.0
margin_top = 14.0
margin_right = 110.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.258824, 0.223529, 1 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PP" type="Label" parent="."]
margin_left = 71.1224
margin_top = 31.6654
margin_right = 83.1224
margin_bottom = 46.6654
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.219608, 0.258824, 0.223529, 1 )
text = "15
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxPP" type="Label" parent="."]
margin_left = 93.5423
margin_top = 32.2273
margin_right = 105.542
margin_bottom = 47.2273
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.219608, 0.258824, 0.223529, 1 )
text = "15"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
